<resources>
    <string name="app_name">MetricConverterTest</string>
    <string name="app_name_label">Metric Converter</string>
    <string name="creator_info_label">By: Yonathan Hot Gabe Sihotang</string>
    <string name="select_metric_label">Input</string>
    <string name="from_metric_label">Dari:</string>
    <string name="result_label">Hasil</string>
    <string name="input_placeholder">Ketik input disini</string>
</resources>